--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -19,7 +19,7 @@
 </section>
  <section>
 <b>Películas</b>
- <p>(Contenido)</p>
+ <p>PETER PAN</p>
  </section>
  <!-- Pie de pagina -->
  <footer>
